# Android-Task-Manager

./: .gitignore  AGENTS.md  FinishTask.sh  README.md  build.gradle.kts  deploy.sh  device.dtb  devices_mapping.db  settings.gradle.kts
app/: build.gradle.kts  release.keystore
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/taskmanager/: IRootService.aidl
app/src/main/aidl/com/xmodern/taskmgmt/: IRootService.aidl
app/src/main/cpp/: CMakeLists.txt  battery_stats.cpp  battery_stats.h  cpu_stats.cpp  cpu_stats.h  disk_stats.cpp  disk_stats.h  gpu_stats.cpp  gpu_stats.h  memory_stats.cpp  memory_stats.h  native-lib.cpp  native_common.h  native_utils.cpp  native_utils.h  net_stats.cpp  net_stats.h  performance_mini.cpp  performance_mini.h  process_detail.cpp  process_detail.h  process_scan.cpp  process_scan.h  safe_kill.cpp  safe_kill.h  system_stats.cpp  system_stats.h
app/src/main/java/com/example/taskmanager/: MainActivity.kt  PerformanceActivity.kt
app/src/main/java/com/example/taskmanager/service/: NativeBridge.kt  RootBackendService.kt  RootConnectionManager.kt
app/src/main/java/com/example/taskmanager/util/: SocNameMapper.kt
app/src/main/java/com/xmodern/taskmgmt/: MainActivity.kt  PerformanceActivity.kt
app/src/main/java/com/xmodern/taskmgmt/service/: NativeBridge.kt  RootBackendService.kt  RootConnectionManager.kt
app/src/main/res/raw/: socs_mapping.json
app/src/main/res/values/: themes.xml
release/: RELEASE_NOTES_v1.8_Beta.txt
rust_backend/: Cargo.toml
rust_backend/src/: lib.rs
scripts/: deploy_release.sh
(+36 files in other folders)
